[workspace]
members = ["app", "game"]
resolver = "2"

[workspace.dependencies]
idct-game = { path = "game" }
anyhow = "1.0.99"
base64 = "0.22.1"
rand = { version = "0.9.2", features = ["serde"] }
rmp-serde = "1.3.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.14"
zstd = "0.13.3"