[package]
name = "idct-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
eframe = { version = "0.32.0", features = ["persistence"] }
egui = { version = "0.32.0", features = ["persistence"] }
egui-file-dialog = "0.11.0"
egui-notify = "0.20.0"
idct-game = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
